gcc/testsuite/rust.test/fail_compilation/arrays2.rs
fn main() {
    let array: [i32; 5] = [1, 2, 3];
}
